mufghelloworld-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mufghelloworld-deployment
  namespace: mufg
  labels:
    app: mufghelloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mufghelloworld
  template:
    metadata:
      labels:
        app: mufghelloworld
    spec:
      containers:
      - name: mufghelloworld
        image: registry.hub.docker.com/virtusademo/mufg-hello-world
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
