mufghelloworld-service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: mufghelloworld
  namespace: mufg
  labels:
    app: mufghelloworld
spec: 
  ports: 
    - 
      name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector: 
    app: mufghelloworld
  type: LoadBalancer
